# ragtriage

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN_report_refinement.md  PLAN_surface_diagnostics.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
data/: ab_openai_full_dataset.jsonl.bak  sample_queries.jsonl
docs/: architecture.md
examples/: basic_usage.py  cs_action_items.csv  rag_root_cause_analysis.md  ragtriage.yaml
src/ragtriage/: __init__.py  analyze_rag_final.py  analyzer.py  app.py  build_index.py  cli.py  eval_rag.py  evaluator.py  reporter.py
src/ragtriage/clustering/: __init__.py  analyzer.py  clusterer.py  embedder.py  interactive_visualizer.py  pipeline.py  reducer.py  visualizer.py
src/ragtriage/surface_diagnostics/: __init__.py  analyzer.py
tests/: test_clustering.py  test_reporter.py  test_surface_diagnostics.py
